# Tangram

./: .babelrc  .editorconfig  .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  Makefile  README.md  TODO.md  TODO.txt  Tangram.doap  gigagram.flatpak  jsconfig.json  meson.build  notes.txt  package-lock.json  package.json  prgname.js  re.sonny.Tangram  re.sonny.Tangram.json  re.sonny.gigagram.json  re.sonny.gigagram.yaml  rollup.config.js  run.sh  webpack.config.js
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: blank.html  menu.xml.ui  meson.build  re.sonny.Tangram.appdata.xml.in  re.sonny.Tangram.data.gresource.xml  re.sonny.Tangram.desktop  re.sonny.Tangram.desktop.in  re.sonny.Tangram.gschema.xml  re.sonny.Tangram.service  re.sonny.gigagram.appdata.xml.in  re.sonny.gigagram.data.gresource.xml  re.sonny.gigagram.desktop.in  re.sonny.gigagram.gschema.xml  shortcuts.ui  shortcuts.xml.ui
data/appdata/: meson.build  re.sonny.Tangram.appdata.xml.in  re.sonny.Tangram.metainfo.xml  re.sonny.Tangram.metainfo.xml.in
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  cs.po  da.po  de.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  id.po  it.po  ja.po  meson.build  ms.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  re.sonny.Tangram.pot  ru.po  si.po  sv.po  tr.po  uk.po  zh_Hans.po
src/: AboutDialog.js  Actions.js  AddressBar.js  Header.js  InstanceDialog.ui  Notebook.js  Shortcuts.js  TabWidget.blp  TabWidget.js  TabWidget.ui  ViewNew.blp  ViewNew.js  ViewTabs.blp  ViewTabs.js  WebView.js  application.js  applicationDialog.js  bin.js  blank.html  constants.js  dev.js  env.js  ephy.js  flags.js  gigagram.js  header.js  homePage.js  hostnameUtils.js  hostnameUtils.test.js  icon.js  index.js  instanceDialog.blp  instanceDialog.js  instanceDialog.ui  instanceManager.js  instances.js  local.js  main.js  menu.blp  meson.build  (+26 more)
src/services/custom/: service.json
src/services/discord/: service.json
src/services/facebook/: service.json
src/services/fastmail/: service.json
src/services/gmail/: service.json
src/services/groupme/: service.json
src/services/keepnote/: service.json
src/services/mastodon/: service.json
src/services/messenger/: service.json
src/services/outlook/: service.json
src/services/riot/: service.json
src/services/simplenote/: service.json
src/services/skype/: service.json
src/services/slack/: service.json
src/services/steam-chat/: service.json
src/services/telegram/: service.json  style.css
src/services/trello/: service.json
src/services/tweetdeck/: service.json
src/services/twitter/: service.json
src/services/whatsapp/: service.json  style.css
src/std/: README.md  console.js  encoding.js  fetch.js  globals.js  timers.js
src/webapp/: ephy.js  test.js  webapp.js
subprojects/: blueprint-compiler.wrap
